--- a/BankWebApp/Pages/Customers/Account.cshtml
+++ b/BankWebApp/Pages/Customers/Account.cshtml
@@ -56,7 +56,7 @@
         </tbody>
 
     </table>
-    <a class="btn btn-primary" href="javascript:fetchMore();">See more</a>
+    <a class="btn btn-primary mt-4 mb-4" href="javascript:fetchMore();">See more</a>
 </div>
 </div>
 
