--- a/BankWebApp/Pages/Transactions/Deposit.cshtml
+++ b/BankWebApp/Pages/Transactions/Deposit.cshtml
@@ -3,12 +3,39 @@
 @{
 }
 
-<form method="post">
-    <div class="form-group">
-        <label asp-for="Amount">Amount</label>
-        <input class="form-control" asp-for="Amount" />
-        <span class="field-validation-error" asp-validation-for="Amount"></span>
+
+<div class="container white-widget pb-1 mt-5">
+    <div class="row">
+        <h2 class="mt-3 pb-3 pl-2-rem">Deposit - @Model.Account.Givenname</h2>
+         <hr class="mt-4" />
+        <div class="col-lg-5 col-12">
+            <form class="pl-1" method="post">
+                <div class="form-group">
+                    <label asp-for="Amount">Amount</label>
+                    <input class="form-control" asp-for="Amount" />
+                    <span class="field-validation-error" asp-validation-for="Amount"></span>
+                </div>
+
+                <button class="btn btn-success mb-4" type="submit">Deposit</button>
+            </form>
+        </div>
+        <div class="col-lg-4 offset-lg-1 col-12">
+            <dl class="row mt-2">
+                <dt class="col-md-3 col-5 text-key">Account No</dt>
+                <dd class="col-md-9 col-6 text-value">@Model.Account.AccountId</dd>
+
+                <dt class="col-md-3 col-5 text-key">Created Date</dt>
+                <dd class="col-md-9 col-6 text-value">@Model.Account.Created</dd>
+
+                <dt class="col-md-3 col-5 text-key">Balance</dt>
+                <dd class="col-md-9 col-6 text-value">@Model.Account.Balance</dd>
+
+
+            </dl>
+        </div>
+
     </div>
 
-    <button class="btn btn-success"type="submit">Deposit</button>
-</form>
+
+</div>
+
