--- a/BankWebApp/Pages/Transactions/Deposit.cshtml
+++ b/BankWebApp/Pages/Transactions/Deposit.cshtml
@@ -13,7 +13,7 @@
                 <div class="form-group">
                     <label asp-for="Amount">Amount</label>
                     <input class="form-control" asp-for="Amount" />
-                    <span class="field-validation-error" asp-validation-for="Amount"></span>
+                    <span class="text-danger" asp-validation-for="Amount"></span>
                 </div>
 
                 <button class="btn btn-success mb-4" type="submit">Deposit</button>
