--- a/BankWebApp/Pages/Customers/Customer.cshtml
+++ b/BankWebApp/Pages/Customers/Customer.cshtml
@@ -41,9 +41,11 @@
           @Model.WithdrawSuccess
         </div>
     }
+    <div class="d-flex justify-content-md-between mb-2">
+        <h2 class="mt-3 pl-2-rem">Customer Page - @Model.Customer.Givenname</h2>
+        <a asp-page="/Customers/Edit" asp-route-customerId="@Model.Customer.Id" class="btn btn-primary">Edit Customer</a>
+    </div>
     
-    <h2 class="mt-3 pb-3 pl-2-rem">Customer Page - @Model.Customer.Givenname</h2>
-
     <hr class="mt-4" />
     <dl class="row mt-2 pl-2">
         <dt class="col-md-3 col-5 text-key">Account No</dt>
