--- a/BankWebApp/Pages/Users/Index.cshtml
+++ b/BankWebApp/Pages/Users/Index.cshtml
@@ -75,7 +75,7 @@
                         }
                     </td>
                     <td>
-                        <a class="btn btn-primary" asp-page="/Users/User" asp-route-customerId="@item.Id">View</a>
+                        <a class="btn btn-primary" asp-page="/Users/User" asp-route-userId="@item.Id">View</a>
                     </td>
                 </tr>
             }
