--- a/BankWebApp/Areas/Identity/Pages/Account/Register.cshtml
+++ b/BankWebApp/Areas/Identity/Pages/Account/Register.cshtml
@@ -25,23 +25,27 @@
                         <label asp-for="Input.Password"></label>
                         <span asp-validation-for="Input.Password" class="text-danger"></span>
                     </div>
-                    <div class="form-floating">
+                    <div class="form-floating mt-4 mb-4">
                         <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
                         <label asp-for="Input.ConfirmPassword"></label>
                         <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
                     </div>
 
+                    <div class="form-floating mt-4 mb-4">
+                        <input asp-for="Input.PhoneNumber" class="form-control" aria-required="true" />
+                        <label asp-for="Input.PhoneNumber"></label>
+                        <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+                    </div>
 
-                    @foreach (var role in Model.Input.UserRoles)
-                    {
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="@role.Name" id="@role.Id" name="Input.UserRolesString">
-                            <label class="form-check-label" for="@role.Id">
+                    <div class="form-check mx-4">
+                        @foreach (var role in Model.Input.UserRoles)
+                        {
+                            <input class="form-check-input my-1" type="checkbox" value="@role.Name" id="@role.Id" name="Input.UserRolesString">
+                            <label class="form-check-label my-1" for="@role.Id">
                                 @role.Name
                             </label>
-                        </div>
-                    }
-
+                        }
+                    </div>
 
 
                     <button id="registerSubmit" type="submit" class="btn btn-lg btn-primary mt-4 mb-4">Register</button>
