--- a/BankWebApp/Pages/Shared/_MainContent.cshtml
+++ b/BankWebApp/Pages/Shared/_MainContent.cshtml
@@ -120,9 +120,9 @@
                                     <h4 class="card-title card-title-dash">Countries Overview</h4>
                                    <p class="card-subtitle card-subtitle-dash">Choose a country to see the top customers</p>
                                   </div>
-                                  <div>
+                                  @*<div>
                                     <button class="btn btn-primary btn-lg text-white mb-0 me-0" type="button"><i class="mdi mdi-account-plus"></i>Add new member</button>
-                                  </div>
+                                  </div>*@
                                 </div>
                                 <div class="table-responsive  mt-1">
                                   <table class="table select-table">
@@ -143,7 +143,7 @@
                                            <tr>
                                             <td>
                                               <div class="d-flex ">
-                                                <img src="images/flags/se.svg" alt="">
+                                                <img src=@item.CountryImage alt="">
                                                 <div>
                                                   <h6>@item.CountryName</h6>
                                                   @*<p>Head admin</p>*@
@@ -151,112 +151,17 @@
                                               </div>
                                             </td>
                                             <td>
-                                              <h6>56000</h6>
-                                              @*<p>Total</p>*@
+                                              <h6>@item.Customers</h6>  
                                             </td>
                                             <td>
-                                              <div>
-                                                <div class="d-flex justify-content-between align-items-center mb-1 max-width-progress-wrap">
-                                                  <p class="text-success">79%</p>
-                                                  <p>85/162</p>
-                                                </div>
-                                                <div class="progress progress-md">
-                                                  <div class="progress-bar bg-success" role="progressbar" style="width: 85%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                                                </div>
-                                              </div>
+                                              <h6>@item.Accounts</h6>
                                             </td>
-                                            <td><div class="badge badge-opacity-warning">In progress</div></td>
+                                            <td>
+                                              <h6>$ @item.Balance</h6>
+                                            </td>
                                           </tr>
 
-                                        }
-                                      
-
-                                      <tr>
-                                       
-                                        <td>
-                                          <div class="d-flex">
-                                           <img src="images/flags/dk.svg" alt="">
-                                            <div>
-                                              <h6>Norge</h6>
-                                              @*<p>Head admin</p>*@
-                                            </div>
-                                          </div>
-                                        </td>
-                                        <td>
-                                          <h6>43000</h6>
-                                          @*<p>company type</p>*@
-                                        </td>
-                                        <td>
-                                          <div>
-                                            <div class="d-flex justify-content-between align-items-center mb-1 max-width-progress-wrap">
-                                              <p class="text-success">65%</p>
-                                              <p>85/162</p>
-                                            </div>
-                                            <!--  Progress Bar  -->
-                                            @*<div class="progress progress-md">
-                                              <div class="progress-bar bg-success" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
-                                            </div>*@
-                                          </div>
-                                        </td>
-                                        <td><div class="badge badge-opacity-warning">In progress</div></td>
-                                      </tr>
-                                      <tr>
-                                        
-                                        <td>
-                                          <div class="d-flex">
-                                            <img src="images/flags/no.svg" alt="">
-                                            <div>
-                                              <h6>Wayne Murphy</h6>
-                                              <p>Head admin</p>
-                                            </div>
-                                          </div>
-                                        </td>
-                                        <td>
-                                          <h6>Company name 1</h6>
-                                          <p>company type</p>
-                                        </td>
-                                        <td>
-                                          <div>
-                                            <div class="d-flex justify-content-between align-items-center mb-1 max-width-progress-wrap">
-                                              <p class="text-success">65%</p>
-                                              <p>85/162</p>
-                                            </div>
-                                            <div class="progress progress-md">
-                                              <div class="progress-bar bg-warning" role="progressbar" style="width: 38%" aria-valuenow="38" aria-valuemin="0" aria-valuemax="100"></div>
-                                            </div>
-                                          </div>
-                                        </td>
-                                        <td><div class="badge badge-opacity-warning">In progress</div></td>
-                                      </tr>
-                                      <tr>
-                                        
-                                        <td>
-                                          <div class="d-flex">
-                                            <img src="images/flags/fi.svg" alt="">
-                                            <div>
-                                              <h6>Matthew Bailey</h6>
-                                              <p>Head admin</p>
-                                            </div>
-                                          </div>
-                                        </td>
-                                        <td>
-                                          <h6>Company name 1</h6>
-                                          <p>company type</p>
-                                        </td>
-                                        <td>
-                                          <div>
-                                            <div class="d-flex justify-content-between align-items-center mb-1 max-width-progress-wrap">
-                                              <p class="text-success">65%</p>
-                                              <p>85/162</p>
-                                            </div>
-                                            <div class="progress progress-md">
-                                              <div class="progress-bar bg-danger" role="progressbar" style="width: 15%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
-                                            </div>
-                                          </div>
-                                        </td>
-                                        <td><div class="badge badge-opacity-danger">Pending</div></td>
-                                      </tr>
-                                      
+                                        }        
                                     </tbody>
                                   </table>
                                 </div>
