--- a/BankWebApp/Pages/Customers/Edit.cshtml
+++ b/BankWebApp/Pages/Customers/Edit.cshtml
@@ -11,7 +11,7 @@
     <hr class="mt-4" />
 
     <form method="post">
-       <input hidden asp-for="@Model.CustomerId"/>
+       @*<input hidden asp-for="@Model.CustomerId"/>*@
         <div class="row">
             <div class="col-12 col-lg-6">
                 <div class="form-group">
