--- a/BankWebApp/Pages/Shared/_MainContent.cshtml
+++ b/BankWebApp/Pages/Shared/_MainContent.cshtml
@@ -134,6 +134,7 @@
                                         <th>Customers</th>
                                         <th>Accounts</th>
                                         <th>Balance</th>
+                                        <th></th>
                                       </tr>
                                     </thead>
                                     <tbody>
@@ -142,7 +143,7 @@
                                         {
                                            <tr>
                                             <td>
-                                              <div class="d-flex ">
+                                              <div class="d-flex">
                                                 <img src=@item.CountryImage alt="">
                                                 <div>
                                                   <h6>@item.CountryName</h6>
@@ -158,6 +159,9 @@
                                             </td>
                                             <td>
                                               <h6>$ @item.Balance</h6>
+                                            </td>
+                                            <td>
+                                              <a class="btn btn-primary" asp-page="/Countries/Country" asp-route-countryName="@item.CountryName">Details</a>
                                             </td>
                                           </tr>
 
