Response cashing added to Country.cshtml

--- a/BankWebApp/Pages/Countries/Country.cshtml
+++ b/BankWebApp/Pages/Countries/Country.cshtml
@@ -9,7 +9,8 @@
         <div>
             <img class="country-flag-icon" src=@Model.CountryFlag alt="bblabla">
             <h3 class="card-title card-title-dash d-inline">@Model.CountryName</h3>
-            <p class="card-subtitle card-subtitle-dash mt-3 text-size">Top 10 customers</p>
+            <p class="card-subtitle card-subtitle-dash mt-3 text-size">Top 10 customers</p> 
+            <h1>@Model.ResponseTest</h1>
         </div>
         <div>
             
