--- a/BankWebApp/Pages/Shared/_LeftSidebar.cshtml
+++ b/BankWebApp/Pages/Shared/_LeftSidebar.cshtml
@@ -1,7 +1,8 @@
-﻿@using Microsoft.AspNetCore.Identity
+﻿@using BankWebApp.Models
+@using Microsoft.AspNetCore.Identity
 
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<User> SignInManager
+@inject UserManager<User> UserManager
 
 <nav class="sidebar sidebar-offcanvas" id="sidebar">
     <ul class="nav">
