--- a/BankWebApp/Pages/Customers/New.cshtml
+++ b/BankWebApp/Pages/Customers/New.cshtml
@@ -87,6 +87,16 @@
                     <input class="form-control" asp-for="@Model.NewCustomer.Telephonenumber">
                     <span asp-validation-for="@Model.NewCustomer.Telephonenumber" class="text-danger"></span>
                 </div>
+                <div class="form-group">
+                    <input asp-for="@Model.Password" class="form-control" autocomplete="new-password" aria-required="true" />
+                    <label asp-for="@Model.Password"></label>
+                    <span asp-validation-for="@Model.Password" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input asp-for="@Model.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
+                    <label asp-for="@Model.ConfirmPassword"></label>
+                    <span asp-validation-for="@Model.ConfirmPassword" class="text-danger"></span>
+                </div>
             </div>
         </div>
 
@@ -96,5 +106,5 @@
 
 
 @section Scripts {
-    <partial name="_ValidationScriptsPartial" />
+<partial name="_ValidationScriptsPartial" />
 }
