--- a/BankWebApp/Pages/Customers/Customer.cshtml
+++ b/BankWebApp/Pages/Customers/Customer.cshtml
@@ -1,31 +1,8 @@
 ﻿@page
+@using BankWebApp.Models
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<User> SignInManager
 @model BankWebApp.Pages.Customers.CustomerModel
-@{
-}
-
-
-@*
-
-    <div class="container mt-5 pt-5">
-    <table class="table table-hover mt-5 mb-2">
-    <thead>
-    <tr>
-    <th>
-
-    </th>
-    </thead>
-    <tbody>
-    <tr>
-    <td>
-    </td>
-    </tr>
-
-    </tbody>
-    </table>
-
-    </div>
-*@
-
 
 
 <div class="container white-widget pb-1 mt-5">
@@ -41,10 +18,16 @@
           @Model.WithdrawSuccess
         </div>
     }
-    <div class="d-flex justify-content-md-between mb-2">
+
+    
+   @if (SignInManager.IsSignedIn(User))
+    {
+      <div class="d-flex justify-content-md-between mb-2">
         <h2 class="mt-3 pl-2-rem">Customer Page - @Model.Customer.Givenname</h2>
         <a asp-page="/Customers/Edit" asp-route-customerId="@Model.Customer.Id" class="btn btn-primary">Edit Customer</a>
-    </div>
+    </div>  
+    }
+    
     
     <hr class="mt-4" />
     <dl class="row mt-2 pl-2">
