--- a/BankWebApp/Pages/Shared/_LeftSidebar.cshtml
+++ b/BankWebApp/Pages/Shared/_LeftSidebar.cshtml
@@ -27,12 +27,17 @@
             </a>
         </li>
         <!-- TODO Hide from non admins -->
-        <li class="nav-item">
-            <a class="nav-link" asp-page="/Users/Index">
-                <i class="mdi mdi-grid-large menu-icon"></i>
-                <span class="menu-title">All Users</span>
-            </a>
-        </li>
+        
+        @if (SignInManager.IsSignedIn(User) && await UserManager.IsInRoleAsync(UserManager.GetUserAsync(User).Result, "Admin"))
+        {
+            <li class="nav-item">
+                <a class="nav-link" asp-page="/Users/Index">
+                    <i class="mdi mdi-grid-large menu-icon"></i>
+                    <span class="menu-title">All Users</span>
+                </a>
+            </li>
+        }
+        
 
         <li class="nav-item nav-category">Customer operation</li>
 
@@ -68,78 +73,29 @@
                 <a class="btn btn-success login-btn" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
             </li>
         }
-        <li class="nav-item nav-category">Users</li>
-        <li class="nav-item">
-            <a class="nav-link" data-bs-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
-                <i class="menu-icon mdi mdi-account-circle-outline"></i>
-                <span class="menu-title">User Actions</span>
-                <i class="menu-arrow"></i>
-            </a>
-            <div class="collapse" id="auth">
-                <ul class="nav flex-column sub-menu">
-                    <li class="nav-item"> <a class="nav-link" id="register" asp-area="Identity" asp-page="/Account/Register"> Register </a></li>
-                    @*<li class="nav-item"> <a class="nav-link" href="pages/samples/login.html"> Login </a></li>*@
-                </ul>
-            </div>
-        </li>
 
-        <li class="nav-item nav-category">Forms and Datas</li>
-        <li class="nav-item">
-            <a class="nav-link" data-bs-toggle="collapse" href="#form-elements" aria-expanded="false" aria-controls="form-elements">
-                <i class="menu-icon mdi mdi-card-text-outline"></i>
-                <span class="menu-title">Form elements</span>
-                <i class="menu-arrow"></i>
-            </a>
-            <div class="collapse" id="form-elements">
-                <ul class="nav flex-column sub-menu">
-                    <li class="nav-item"><a class="nav-link" href="pages/forms/basic_elements.html">Basic Elements</a></li>
-                </ul>
-            </div>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" data-bs-toggle="collapse" href="#charts" aria-expanded="false" aria-controls="charts">
-                <i class="menu-icon mdi mdi-chart-line"></i>
-                <span class="menu-title">Charts</span>
-                <i class="menu-arrow"></i>
-            </a>
-            <div class="collapse" id="charts">
-                <ul class="nav flex-column sub-menu">
-                    <li class="nav-item"> <a class="nav-link" href="pages/charts/chartjs.html">ChartJs</a></li>
-                </ul>
-            </div>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" data-bs-toggle="collapse" href="#tables" aria-expanded="false" aria-controls="tables">
-                <i class="menu-icon mdi mdi-table"></i>
-                <span class="menu-title">Tables</span>
-                <i class="menu-arrow"></i>
-            </a>
-            <div class="collapse" id="tables">
-                <ul class="nav flex-column sub-menu">
-                    <li class="nav-item"> <a class="nav-link" href="pages/tables/basic-table.html">Basic table</a></li>
-                </ul>
-            </div>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" data-bs-toggle="collapse" href="#icons" aria-expanded="false" aria-controls="icons">
-                <i class="menu-icon mdi mdi-layers-outline"></i>
-                <span class="menu-title">Icons</span>
-                <i class="menu-arrow"></i>
-            </a>
-            <div class="collapse" id="icons">
-                <ul class="nav flex-column sub-menu">
-                    <li class="nav-item"> <a class="nav-link" href="pages/icons/mdi.html">Mdi icons</a></li>
-                </ul>
-            </div>
-        </li>
+        @if (SignInManager.IsSignedIn(User) && await UserManager.IsInRoleAsync(UserManager.GetUserAsync(User).Result, "Admin"))
+        {
+          <li class="nav-item nav-category">Users</li>
+            <li class="nav-item">
+                <a class="nav-link" data-bs-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
+                    <i class="menu-icon mdi mdi-account-circle-outline"></i>
+                    <span class="menu-title">User Actions</span>
+                    <i class="menu-arrow"></i>
+                </a>
+                <div class="collapse" id="auth">
+                    <ul class="nav flex-column sub-menu">
+                        <li class="nav-item"> <a class="nav-link" id="register" asp-area="Identity" asp-page="/Account/Register"> Register </a></li>
+                        @*<li class="nav-item"> <a class="nav-link" href="pages/samples/login.html"> Login </a></li>*@
+                    </ul>
+                </div>
+            </li>  
+        }
+        
 
         
-        <li class="nav-item nav-category">help</li>
-        <li class="nav-item">
-            <a class="nav-link" href="http://bootstrapdash.com/demo/star-admin2-free/docs/documentation.html">
-                <i class="menu-icon mdi mdi-file-document"></i>
-                <span class="menu-title">Documentation</span>
-            </a>
-        </li>
+
+        
+        
     </ul>
 </nav>
