--- a/BankWebApp/Pages/Shared/_Navbar.cshtml
+++ b/BankWebApp/Pages/Shared/_Navbar.cshtml
@@ -199,12 +199,12 @@
                     </form>
                 </li>
             }
-            @*else
+            else
             {
                 <li class="nav-item d-none d-lg-block">
                     <a class="btn btn-success" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
                 </li>
-            }*@
+            }
         </ul>
         <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-bs-toggle="offcanvas">
             <span class="mdi mdi-menu"></span>
