--- a/BankWebApp/Pages/Shared/_Navbar.cshtml
+++ b/BankWebApp/Pages/Shared/_Navbar.cshtml
@@ -41,7 +41,7 @@
                         <span class="text-black fw-bold">@UserManager.GetUserName(User)</span>
                     </h1>
 
-                    <h3 class="welcome-sub-text">Your performance summary this week </h3>
+                    <h3 class="welcome-sub-text">Your general performance summary</h3>
                 </li>
             }
         </ul>
