--- a/BankWebApp/Pages/Shared/_MainContent.cshtml
+++ b/BankWebApp/Pages/Shared/_MainContent.cshtml
@@ -13,69 +13,14 @@
             <div class="col-sm-12">
                 <div class="home-tab">
                     <div class="d-sm-flex align-items-center justify-content-between border-bottom">
-                        @*<ul class="nav nav-tabs" role="tablist">
-                            <li class="nav-item">
-                            <a class="nav-link active ps-0" id="home-tab" data-bs-toggle="tab" href="#overview" role="tab" aria-controls="overview" aria-selected="true">Overview</a>
-                            </li>
-                            <li class="nav-item">
-                            <a class="nav-link" id="profile-tab" data-bs-toggle="tab" href="#audiences" role="tab" aria-selected="false">Audiences</a>
-                            </li>
-                            <li class="nav-item">
-                            <a class="nav-link" id="contact-tab" data-bs-toggle="tab" href="#demographics" role="tab" aria-selected="false">Demographics</a>
-                            </li>
-                            <li class="nav-item">
-                            <a class="nav-link border-0" id="more-tab" data-bs-toggle="tab" href="#more" role="tab" aria-selected="false">More</a>
-                            </li>
-                            </ul>*@
-                        @*<div>
-                            <div class="btn-wrapper">
-                            <a href="#" class="btn btn-otline-dark align-items-center"><i class="icon-share"></i> Share</a>
-                            <a href="#" class="btn btn-otline-dark"><i class="icon-printer"></i> Print</a>
-                            <a href="#" class="btn btn-primary text-white me-0"><i class="icon-download"></i> Export</a>
-                            </div>
-                            </div>*@
+                        
                     </div>
                     <div class="tab-content tab-content-basic">
                         <div class="tab-pane fade show active" id="overview" role="tabpanel" aria-labelledby="overview">
-                            @*<div class="row">
-                                <div class="col-sm-12">
-                                <div class="statistics-details d-flex align-items-center justify-content-between">
-                                <div>
-                                <p class="statistics-title">Number of accounts</p>
-                                <h3 class="rate-percentage"></h3>
-                                <p class="text-danger d-flex"><i class="mdi mdi-menu-down"></i><span>-0.5%</span></p>
-                                </div>
-                                <div>
-                                <p class="statistics-title">Page Views</p>
-                                <h3 class="rate-percentage">7,682</h3>
-                                <p class="text-success d-flex"><i class="mdi mdi-menu-up"></i><span>+0.1%</span></p>
-                                </div>
-                                <div>
-                                <p class="statistics-title">New Sessions</p>
-                                <h3 class="rate-percentage">68.8</h3>
-                                <p class="text-danger d-flex"><i class="mdi mdi-menu-down"></i><span>68.8</span></p>
-                                </div>
-                                <div class="d-none d-md-block">
-                                <p class="statistics-title">Avg. Time on Site</p>
-                                <h3 class="rate-percentage">2m:35s</h3>
-                                <p class="text-success d-flex"><i class="mdi mdi-menu-down"></i><span>+0.8%</span></p>
-                                </div>
-                                <div class="d-none d-md-block">
-                                <p class="statistics-title">New Sessions</p>
-                                <h3 class="rate-percentage">68.8</h3>
-                                <p class="text-danger d-flex"><i class="mdi mdi-menu-down"></i><span>68.8</span></p>
-                                </div>
-                                <div class="d-none d-md-block">
-                                <p class="statistics-title">Avg. Time on Site</p>
-                                <h3 class="rate-percentage">2m:35s</h3>
-                                <p class="text-success d-flex"><i class="mdi mdi-menu-down"></i><span>+0.8%</span></p>
-                                </div>
-                                </div>
-                                </div>
-                                </div> *@
+                           
 
                             <div class="row">
-                                <div class="col-lg-8 d-flex flex-column">
+                                <div class="col-xl-9 offset-xl-1 d-flex flex-column">
 
 
                                     <!-- Campaign banner card -->
@@ -222,149 +167,13 @@
                                             </div>
                                         </div>
                                     </div>
-
-
-
-
-
-                                    <!-- Two smaller 6 column cards  -->
-                                    @* <div class="row flex-grow">
-                                        <div class="col-md-6 col-lg-6 grid-margin stretch-card">
-                                        <div class="card card-rounded">
-                                        <div class="card-body card-rounded">
-                                        <h4 class="card-title  card-title-dash">Recent Events</h4>
-                                        <div class="list align-items-center border-bottom py-2">
-                                        <div class="wrapper w-100">
-                                        <p class="mb-2 font-weight-medium">
-                                        Change in Directors
-                                        </p>
-                                        <div class="d-flex justify-content-between align-items-center">
-                                        <div class="d-flex align-items-center">
-                                        <i class="mdi mdi-calendar text-muted me-1"></i>
-                                        <p class="mb-0 text-small text-muted">Mar 14, 2019</p>
-                                        </div>
-                                        </div>
-                                        </div>
-                                        </div>
-                                        <div class="list align-items-center border-bottom py-2">
-                                        <div class="wrapper w-100">
-                                        <p class="mb-2 font-weight-medium">
-                                        Other Events
-                                        </p>
-                                        <div class="d-flex justify-content-between align-items-center">
-                                        <div class="d-flex align-items-center">
-                                        <i class="mdi mdi-calendar text-muted me-1"></i>
-                                        <p class="mb-0 text-small text-muted">Mar 14, 2019</p>
-                                        </div>
-                                        </div>
-                                        </div>
-                                        </div>
-                                        <div class="list align-items-center border-bottom py-2">
-                                        <div class="wrapper w-100">
-                                        <p class="mb-2 font-weight-medium">
-                                        Quarterly Report
-                                        </p>
-                                        <div class="d-flex justify-content-between align-items-center">
-                                        <div class="d-flex align-items-center">
-                                        <i class="mdi mdi-calendar text-muted me-1"></i>
-                                        <p class="mb-0 text-small text-muted">Mar 14, 2019</p>
-                                        </div>
-                                        </div>
-                                        </div>
-                                        </div>
-                                        <div class="list align-items-center border-bottom py-2">
-                                        <div class="wrapper w-100">
-                                        <p class="mb-2 font-weight-medium">
-                                        Change in Directors
-                                        </p>
-                                        <div class="d-flex justify-content-between align-items-center">
-                                        <div class="d-flex align-items-center">
-                                        <i class="mdi mdi-calendar text-muted me-1"></i>
-                                        <p class="mb-0 text-small text-muted">Mar 14, 2019</p>
-                                        </div>
-                                        </div>
-                                        </div>
-                                        </div>
-
-                                        <div class="list align-items-center pt-3">
-                                        <div class="wrapper w-100">
-                                        <p class="mb-0">
-                                        <a href="#" class="fw-bold text-primary">Show all <i class="mdi mdi-arrow-right ms-2"></i></a>
-                                        </p>
-                                        </div>
-                                        </div>
-                                        </div>
-                                        </div>
-                                        </div>
-                                        <div class="col-md-6 col-lg-6 grid-margin stretch-card">
-                                        <div class="card card-rounded">
-                                        <div class="card-body">
-                                        <div class="d-flex align-items-center justify-content-between mb-3">
-                                        <h4 class="card-title card-title-dash">Activities</h4>
-                                        <p class="mb-0">20 finished, 5 remaining</p>
-                                        </div>
-                                        <ul class="bullet-line-list">
-                                        <li>
-                                        <div class="d-flex justify-content-between">
-                                        <div><span class="text-light-green">Ben Tossell</span> assign you a task</div>
-                                        <p>Just now</p>
-                                        </div>
-                                        </li>
-                                        <li>
-                                        <div class="d-flex justify-content-between">
-                                        <div><span class="text-light-green">Oliver Noah</span> assign you a task</div>
-                                        <p>1h</p>
-                                        </div>
-                                        </li>
-                                        <li>
-                                        <div class="d-flex justify-content-between">
-                                        <div><span class="text-light-green">Jack William</span> assign you a task</div>
-                                        <p>1h</p>
-                                        </div>
-                                        </li>
-                                        <li>
-                                        <div class="d-flex justify-content-between">
-                                        <div><span class="text-light-green">Leo Lucas</span> assign you a task</div>
-                                        <p>1h</p>
-                                        </div>
-                                        </li>
-                                        <li>
-                                        <div class="d-flex justify-content-between">
-                                        <div><span class="text-light-green">Thomas Henry</span> assign you a task</div>
-                                        <p>1h</p>
-                                        </div>
-                                        </li>
-                                        <li>
-                                        <div class="d-flex justify-content-between">
-                                        <div><span class="text-light-green">Ben Tossell</span> assign you a task</div>
-                                        <p>1h</p>
-                                        </div>
-                                        </li>
-                                        <li>
-                                        <div class="d-flex justify-content-between">
-                                        <div><span class="text-light-green">Ben Tossell</span> assign you a task</div>
-                                        <p>1h</p>
-                                        </div>
-                                        </li>
-                                        </ul>
-                                        <div class="list align-items-center pt-3">
-                                        <div class="wrapper w-100">
-                                        <p class="mb-0">
-                                        <a href="#" class="fw-bold text-primary">Show all <i class="mdi mdi-arrow-right ms-2"></i></a>
-                                        </p>
-                                        </div>
-                                        </div>
-                                        </div>
-                                        </div>
-                                        </div>
-                                        </div>*@
                                 </div>
 
 
 
 
 
-                                <div class="col-lg-4 d-flex flex-column">
+                                @*<div class="col-lg-4 d-flex flex-column">
                                     <div class="row flex-grow">
                                         <div class="col-md-6 col-lg-12 grid-margin stretch-card">
                                             <div class="card bg-primary card-rounded">
@@ -540,7 +349,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div>*@
                             </div>
                         </div>
                     </div>
