Fixed successmessage on edit user and removed error on Profile page from Identity

--- a/BankWebApp/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/BankWebApp/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,6 @@
-﻿@inject SignInManager<IdentityUser> SignInManager
+﻿@using BankWebApp.Models
+
+@inject SignInManager<User> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
