--- a/BankWebApp/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/BankWebApp/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -9,10 +9,11 @@
     }
 }
 
-<h1>Manage your account</h1>
 
-<div>
-    <h2>Change your account settings</h2>
+
+<div class="container white-widget pb-1 mt-5">
+    <h2>Manage your account</h2>
+    <h4 class="mt-3 text-danger">All actions here are currently disabled</h4>
     <hr />
     <div class="row">
         <div class="col-md-3">
