--- a/BankWebApp/Pages/Users/User.cshtml
+++ b/BankWebApp/Pages/Users/User.cshtml
@@ -4,6 +4,14 @@
 }
 
 <div class="container white-widget pb-1 mt-5">
+
+    @if (!String.IsNullOrEmpty(Model.EditSuccess))
+    {
+        <div class="alert alert-success" role="alert">
+          @Model.EditSuccess
+        </div>
+    }
+
     <div class="d-flex justify-content-md-between mb-2">
         <h2 class="mt-3 pl-2-rem">Customer Page - @Model.userViewModel.UserName</h2>
         <a asp-page="/Users/Edit" asp-route-userId="@Model.userViewModel.Id" class="btn btn-primary">Edit User</a>
