--- a/BankWebApp/Pages/Customers/CustomersIndex.cshtml
+++ b/BankWebApp/Pages/Customers/CustomersIndex.cshtml
@@ -6,7 +6,12 @@
 }
 
 <div class="container white-widget mt-5">
-
+    @if (!String.IsNullOrEmpty(Model.RegisterSuccess))
+    {
+        <div class="alert alert-success" role="alert">
+          @Model.RegisterSuccess
+        </div>
+    }
     <div class="row">
         <div class="col-md-4">
             <form method="GET">
@@ -126,6 +131,8 @@
         <!--   Div för sista next   -->
 
         <div>
+            @if (Model.CurrentPage != Model.PageCount)
+                        {
             <a class="btn btn-secondary" asp-page="/Customers/CustomersIndex"
                asp-route-pageno="@(Model.CurrentPage+1)"
                asp-route-searchWord="@Model.SearchWord"
@@ -140,7 +147,7 @@
                asp-route-sortOrder="@Model.SortOrder">
                 @Model.PageCount
             </a>
-
+             }
         </div>
     </div>
 
