--- a/BankWebApp/Pages/Users/User.cshtml
+++ b/BankWebApp/Pages/Users/User.cshtml
@@ -11,9 +11,15 @@
           @Model.EditSuccess
         </div>
     }
+    @if (!String.IsNullOrEmpty(Model.RegisterSuccess))
+    {
+        <div class="alert alert-success" role="alert">
+          @Model.RegisterSuccess
+        </div>
+    }
 
     <div class="d-flex justify-content-md-between mb-2">
-        <h2 class="mt-3 pl-2-rem">Customer Page - @Model.userViewModel.UserName</h2>
+        <h2 class="mt-3 pl-2-rem">User Page - @Model.userViewModel.UserName</h2>
         <a asp-page="/Users/Edit" asp-route-userId="@Model.userViewModel.Id" class="btn btn-primary">Edit User</a>
     </div>
     
