Optimazed countries data for dashboard and REMOVED transactions data for better performance on published build

--- a/BankWebApp/Pages/Index.cshtml
+++ b/BankWebApp/Pages/Index.cshtml
@@ -17,24 +17,24 @@
 <script type="text/javascript">
     //Goes in as an array of data to dashboard.js
     let thisWeekTransaction = new Array();
-    thisWeekTransaction[0] = @Model.ThisWeek.Mon;
-    thisWeekTransaction[1] = @Model.ThisWeek.Tue;
-    thisWeekTransaction[2] = @Model.ThisWeek.Wed;
-    thisWeekTransaction[3] = @Model.ThisWeek.Thu;
-    thisWeekTransaction[4] = @Model.ThisWeek.Fri;
-    thisWeekTransaction[5] = @Model.ThisWeek.Sat;
-    thisWeekTransaction[6] = @Model.ThisWeek.Sun;
+    //thisWeekTransaction[0] = Model.ThisWeek.Mon;
+    //thisWeekTransaction[1] = Model.ThisWeek.Tue;
+    //thisWeekTransaction[2] = Model.ThisWeek.Wed;
+    //thisWeekTransaction[3] = Model.ThisWeek.Thu;
+    //thisWeekTransaction[4] = Model.ThisWeek.Fri;
+    //thisWeekTransaction[5] = Model.ThisWeek.Sat;
+    //thisWeekTransaction[6] = Model.ThisWeek.Sun;
    
 
-    //Goes in as an array of data to dashboard.js
+    ////Goes in as an array of data to dashboard.js
     let lastWeekTransaction = new Array();
-    lastWeekTransaction[0] = @Model.LastWeek.Mon;
-    lastWeekTransaction[1] = @Model.LastWeek.Tue;
-    lastWeekTransaction[2] = @Model.LastWeek.Wed;
-    lastWeekTransaction[3] = @Model.LastWeek.Thu;
-    lastWeekTransaction[4] = @Model.LastWeek.Fri;
-    lastWeekTransaction[5] = @Model.LastWeek.Sat;
-    lastWeekTransaction[6] = @Model.LastWeek.Sun;
+    //lastWeekTransaction[0] = Model.LastWeek.Mon;
+    //lastWeekTransaction[1] = Model.LastWeek.Tue;
+    //lastWeekTransaction[2] = Model.LastWeek.Wed;
+    //lastWeekTransaction[3] = Model.LastWeek.Thu;
+    //lastWeekTransaction[4] = Model.LastWeek.Fri;
+    //lastWeekTransaction[5] = Model.LastWeek.Sat;
+    //lastWeekTransaction[6] = Model.LastWeek.Sun;
 
 
     // Global variable, reached in Dashboard.js
