--- a/BankWebApp/Pages/Shared/_MainContent.cshtml
+++ b/BankWebApp/Pages/Shared/_MainContent.cshtml
@@ -133,7 +133,7 @@
                                     </div>
 
                                     <!-- Number of transactions card -->
-                                    <div class="row flex-grow">
+                                    @*<div class="row flex-grow">
                                         <div class="col-12 col-lg-4 col-lg-12 grid-margin stretch-card">
                                             <div class="card card-rounded">
                                                 <div class="card-body">
@@ -150,7 +150,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div>*@
                                 </div>
                             </div>
                         </div>
